--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
 body {
-  color: #333333;   
+  color: #FF7F50;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #c4dce1;                      /*change your Bkg color*/
 }
 
 a, a:active, a:visited {
-  color: #0066CC;
+  color: #008B8B;
 }
 
 .content {
@@ -33,7 +33,7 @@ footer p {
 header {
   background: #C8C1B7;
   border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
+  background-image: url("../img/halo-mre.png"); /*change your banner image*/
   height: 60px;
   position: relative;
   width: 100%;
