--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -1,8 +1,8 @@
 
 body {
-  background-color: #c4dce1; /* change background color */
+  background-color: #af97bf; /* change background color */
   text-align: center;
-  color: #000;  /* change font color */
+  color: #c06b85;  /* change font color */
   line-height: 36px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -14,22 +14,22 @@ body,html {
 
 }
 a, a:active, a:visited {
-  color: #0066CC;
+  color: #802cbc;
 }
 
 h1, h2, h3, h4 {
   font-weight: 300;
-  letter-spacing: 2px; /* change */
+  letter-spacing: 5px; /* change */
 }
 
 h1 {
-  font-size: 36px; /* change */
+  font-size: 38px; /* change */
   line-height: 36px;
   margin: 1.6875rem 0;
 }
 
 #container {
-  background-image: url("../img/cement.jpg"); /* change background */
+  background-image: url("../img/Halo-3-The-Covenant-13-MASTER-CHIEF-DEAD-POOL-WATER.jpg"); /* change background */
   min-height: 100%;
   max-width: 960px;
   margin: 0 auto;
